k8s/maker/02-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maker-wallet-service
  namespace: kube-system
spec:
  serviceName: maker-wallet-service
  replicas: ${MAKER_REPLICAS}
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: maker-wallet-service
  template:
    metadata:
      labels:
        app: maker-wallet-service
    spec:
      containers:
      - name: maker-wallet-service
        image: npool/linera-respeer:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "./wallet-entrypoint.sh"]
        # command: ["/bin/sh", "-c", "sleep 100000"]
        volumeMounts:
        - name: maker-wallet-pvc
          mountPath: /wallet
        resources:
          requests:
            cpu: "150m"
            memory: "768Mi"
          limits:
            cpu: "200m"
            memory: "1024Mi"
      volumes:
      - name: shared-app-data
        persistentVolumeClaim:
          claimName: shared-app-data
  volumeClaimTemplates:
    - metadata:
        name: maker-wallet-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi

---
apiVersion: v1
kind: Service
metadata:
  name: maker-wallet-service
  namespace: kube-system
spec:
  ports:
    - name: maker-wallet-service
      port: 8080
      targetPort: 8080
  selector:
    app: maker-wallet-service

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maker-service
  namespace: kube-system
spec:
  serviceName: maker-service
  replicas: ${MAKER_REPLICAS}
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: maker-service
  template:
    metadata:
      labels:
        app: maker-service
    spec:
      containers:
      - name: maker-service
        image: npool/kline:latest
        imagePullPolicy: Always
        command:
        - /bin/sh
        - -c
        - |
          POD_INDEX=$(hostname | awk -F '-' '{print $NF}')
          SWAP_CHAIN_ID=$(cat /shared-app-data/SWAP_MULTI_OWNER_CHAIN_ID)
          SWAP_APPLICATION_ID=$(cat /shared-app-data/SWAP_APPLICATION_ID)
          PROXY_CHAIN_ID=$(cat /shared-app-data/PROXY_MULTI_OWNER_CHAIN_ID)
          PROXY_APPLICATION_ID=$(cat /shared-app-data/PROXY_APPLICATION_ID)
          CHAIN_ID=$(cat /shared-app-data/MAKER_WALLET_CHAIN_OWNER.$POD_INDEX | head -n 1)
          OWNER=$(cat /shared-app-data/MAKER_WALLET_CHAIN_OWNER.$POD_INDEX | tail -n 1)
          SWAP_CHAIN_ID=$SWAP_CHAIN_ID SWAP_APPLICATION_ID=$SWAP_APPLICATION_ID PROXY_CHAIN_ID=$PROXY_CHAIN_ID PROXY_APPLICATION_ID=$PROXY_APPLICATION_ID SWAP_HOST=query-service:30080 PROXY_HOST=query-service:30080 WALLET_HOST=maker-wallet-service-$POD_INDEX.maker-wallet-service:8080 WALLET_CHAIN=$CHAIN_ID WALLET_OWNER=$OWNER ./maker-entrypoint.sh
        volumeMounts:
        - name: shared-app-data
          mountPath: /shared-app-data
      volumes:
      - name: shared-app-data
        persistentVolumeClaim:
          claimName: shared-app-data

---
apiVersion: v1
kind: Service
metadata:
  name: maker-service
  namespace: kube-system
spec:
  ports:
    - name: maker-service
      port: 8080
      targetPort: 8080
  selector:
    app: maker-service
